# tridymite

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  PKGBUILD  ReadMe.md  cli.cpp  cli.hpp  fun.cpp  function.cpp  function.hpp  install.sh  main.cpp  package.cpp  package.hpp  runtime.hpp  version.hpp
cli/: cli.cpp  cli.hpp
docs/: README.md
function/: function.cpp  function.hpp
manager/dependencies/: dependency_manager.cpp  dependency_manager.hpp
manager/install/: installation_manager.cpp  installation_manager.hpp
manager/pretypes/: pretype_manager.cpp  pretype_manager.hpp
manager/remove/: remove_manager.cpp  remove_manager.hpp
manager/update/: update_manager.cpp  update_manager.hpp
package/: package.cpp  package.hpp
pkg/: example_package.yaml  functions.sh  package.sh  package.trd  package.yaml
pkg/conf/: config.yaml
pkg/conf/deptypes/: cmake
pkg/conf/lang/: english.yaml  german.yaml
pkg/conf/pretypes/: gcc-c  gcc-cpp
pkg/conf/servants/: _standard.yaml  bitbucket.org_servant.py  github.com_servant.py  gitlab.com_servant.py
pretype/: pretype.cpp  pretype.hpp
script/: script.cpp  script.hpp  token.cpp  token.hpp
std/: arguments.hpp  tstd.cpp  tstd.hpp
std/args/: already_installed.hpp  args.hpp  create.hpp  description.hpp  download_to_path.hpp  force.hpp  get.hpp  help.hpp  install.hpp  keep_tmp.hpp  language_file.hpp  list_packages.hpp  local.hpp  no_dependency_checking.hpp  not_secure.hpp  path.hpp  remove.hpp  search.hpp  search_installed.hpp  search_online.hpp  server.hpp  update.hpp  update_all.hpp  update_local_path.hpp  user.hpp  verbose.hpp  version.hpp
translation/: translation.cpp  translation.hpp
variable/: variable.cpp  variable.hpp
yaml/: Yaml.cpp
